2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* AUTHORS: Initial checkin of code
