@@ -28,7 +28,7 @@ fi
 # Setup GETTEXT
 #
 
-GETTEXT_PACKAGE=banter
+GETTEXT_PACKAGE=giver
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Gettext package])
 AM_GLIB_GNU_GETTEXT
