@@ -15,5 +15,16 @@
   </Configurations>
   <Contents>
     <File name="./src/Application.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Logger.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Utilities.cs" subtype="Code" buildaction="Compile" />
   </Contents>
+  <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am">
+    <BuildFilesVar />
+    <DeployFilesVar />
+    <ResourcesVar />
+    <OthersVar />
+    <GacRefVar />
+    <AsmRefVar />
+    <ProjectRefVar />
+  </MonoDevelop.Autotools.MakefileInfo>
 </Project>
