@@ -1,0 +1,9 @@
+#!/bin/sh
+
+prefix="@prefix@"
+exec_prefix="@exec_prefix@"
+libdir="@pkglibdir@"
+
+cd ${libdir}
+
+exec mono "Giver.exe" "$@"
